# mlops-model

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mlops_model/: __init__.py  dataset.py  features.py  plots.py
mlops_model/modeling/: predict.py  train.py
notebooks/: eda_network.ipynb
reports/: profile_processed.html
